--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
             "email": "liuhui@cainiaomeishi.com"
         }
     ],
+    "license": "MIT",
     "require": {
         "php": ">=5.4"
     },
